# ribomala

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml  publish.yml
docs/: api.md  index.md  quickstart.md
ribomala/: analysis.py  index.py  main.py  qc.py
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/quickstart/: index.html
