[project]
name = "ribomala"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "plotly>=6.0.1",
    "polars>=1.29.0",
    "pysam>=0.23.0",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
]
